fixed some layout bugs, adjust how many days show on 768up, changed the font family

--- a/src/scss/_481up.scss
+++ b/src/scss/_481up.scss
@@ -1,10 +1,6 @@
 /* Weather today */
 
-.today-content {
-    .location-data {
-        text-align: right;
-    }
-}
+
 
 .weather-data {
     width: 40%;
