--- a/src/scss/_768up.scss
+++ b/src/scss/_768up.scss
@@ -3,7 +3,6 @@
 }
 
 .location-data {
-    display: inline-block;
     width: 42%;
     padding: 0 2%;
     .weather-single-location {
