--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,6 +7,10 @@ html {
 
 /* header section */
 
+.today-container {
+    box-shadow: 1px 10px 15px $black;
+}
+
 .weather-today {
     position: relative;
     background-image: url('http://getwallpapers.com/wallpaper/full/0/4/a/424222.jpg');
@@ -24,7 +28,8 @@ html {
             padding: 0.5em 0;
         }
     }
-    &:after, &:before {
+    &:after,
+    &:before {
         position: absolute;
         left: 0;
         bottom: 0;
@@ -46,10 +51,34 @@ html {
     padding: 3em 0;
 }
 
+/*********************
+Main content 
+*********************/
+
 /* Weather forcast */
 
+.weather-data-container {
+    background-color: rgba(157, 95, 0, 0.3);
+    border: 2px solid $orange;
+    padding-top: 0.5em;
+}
+
+.weather-results {
+    a,
+    a:hover {
+        text-decoration: none;
+        color: $black;
+    }
+    img {
+        max-width: 100%;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+    }
+}
+
 .forcast-result {
-    margin: 1em 0;
+    margin: 0;
     padding-top: 1em;
     padding-bottom: 1em;
     text-align: center;
@@ -61,15 +90,6 @@ html {
     .forcast-temp {
         margin: 0;
         display: inline-block;
-    }
-}
-
-.weather-results {
-    img {
-        max-width: 100%;
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
     }
 }
 
@@ -104,8 +124,14 @@ html {
 
 .weather-single-temp {
     font-size: 3.5em;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
     sup {
         font-size: 20px;
+        position: absolute;
+        top: 28%;
+        right: -19px;
     }
 }
 
@@ -144,7 +170,9 @@ html {
 }
 
 .location-data {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     width: 100%;
     padding: 0 2%;
     .weather-single-location {
@@ -167,4 +195,11 @@ html {
             content: '';
         }
     }
+}
+
+.weather-single-day {
+    font-size: 2em;
+    text-transform: uppercase;
+    text-align: center;
+    display: inline-block;
 }
