--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,8 +4,8 @@ Variables
 
 $white: #fff;
 $black: #222;
-$gray: #9e9e9e;
+$gray: #a8a8a8;
 $bg: #EBEBEB;
 $brown: rgba(146, 62, 0, 0.5);
 $orange: rgba(157, 95, 0, 0.5);
-$font: 'Ubuntu',sans-serif;
+$font: 'Tajawal', sans-serif;
